--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,20 +8,26 @@
 <!-- Profile Header-->
 <section class="container py-4">
     <div class="row align-items-center mb-2">
-        <div class="col-4 col-md-3">
+        <div class="col-xs-10 offset-xs-1 col- col-md-3">
             <img src="{{ user_profile.avatar.url }}" class="profile-avatar avatar mx-2"
                 aria-labelledby="user-full-name">
         </div>
-        <div class="col-8 col-md-9">
+        <div class="col-xs-10 offset-xs-1 col-md-9">
             <div class="row">
-                <div class="col-12 px-0">
+                <div class="col-12 px-2 px-md-0">
                     <a href="{{user_profile.user.username}}">
-                        <h2 id="user-full-name">{{ user_profile.first_name }} {{ user_profile.last_name }}</h2>
+                        <h2 id="profile-name-display" class="d-inline">
+                        {% if user_profile.first_name and user_profile.last_name %}
+                            {{ user_profile.first_name }} {{ user_profile.last_name }}</h2><h3 class="d-inline"> (@{{ user_profile.user.username }})</h3>
+                        {% else %}
+                            {{ user_profile.user.username }}
+                        {% endif %}
+                        </h2>
                     </a>
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 px-0">
+                <div class="col-12 px-2 px-md-0">
                     <!-- User Role display -->
                     {% if user_profile.role is not None %}
                         <h3>{{ user_profile.role|title }}</h3>
