Improve styling signin and signup pages

--- a/templates/signout.html
+++ b/templates/signout.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+<!-- {% extends "base.html" %}
 
 {% load i18n %}
 
@@ -18,4 +18,4 @@
 </form>
 
 
-{% endblock %}
+{% endblock %} -->
