--- a/templates/signup.html
+++ b/templates/signup.html
@@ -39,27 +39,34 @@
     </div>
     <!-- Image Panel -->
     <div class="col-md-6 px-0 order-2 order-md-1">
-      <img src="https://res.cloudinary.com/cloud9wastaken/image/upload/v1661089300/static/images/theatre-seats_ikycsx.png" aria-hidden="true" class="img-fluid">
+      <img
+        src="https://res.cloudinary.com/cloud9wastaken/image/upload/v1661089300/static/images/theatre-seats_ikycsx.png"
+        aria-hidden="true" class="img-fluid">
     </div>
   </div>
 
-  <!-- Brief About -->
+  <!-- About Section -->
   <div class="row align-items-center">
     <!-- About Panel-->
-    <div class="col-md-6 text-panel">
-      <div class="row align-items-center justify-content-center">
+    <div class="col-md-6 text-panel align-content-center">
+      <div class="row justify-content-center">
         <h2>About</h2>
       </div>
-      <div class="row align-items-center">
-        <div class="col-10 offset-1">
-          Brief about text here.
+      <div class="row">
+        <div class="col-10 offset-1 pt-2">
+          <p class="lead text-justify">A community for performers and others working in the operatic scene on the island of Ireland.</p>
         </div>
       </div>
     </div>
     <!-- Image Panel-->
     <div class="col-md-6 px-0">
-      <img src="https://res.cloudinary.com/cloud9wastaken/image/upload/v1661089282/static/images/cast-reading_zxccsx.jpg" aria-hidden="true" class="img-fluid">
+      <img
+        src="https://res.cloudinary.com/cloud9wastaken/image/upload/v1661089282/static/images/cast-reading_zxccsx.jpg"
+        aria-hidden="true" class="img-fluid">
     </div>
+  </div>
+  <div class="row align-content-center justify-content-center ">
+    <p class="mt-4 mb-2 col-10 text-justify"><a href="{% url 'signup' %}">Sign up</a> for the latest posts from your peers. Personalise your profile to share your professional and academic history and more.</p>
   </div>
 </section>
 
