--- a/templates/signin.html
+++ b/templates/signin.html
@@ -5,6 +5,19 @@
 
 {% block content %}
 
+{% if user.is_authenticated %}
+<section class="container-fluid" tabindex="3">
+  <div class="row justify-content-center align-items-center" id="message-div">
+    <div class="col-12">
+      <div class="alert alert-info alert-dismissible fade show d-flex justify-content-between" id="sticky-msg" role="alert">
+        <p class="lead">You're already logged in as <a href="/profile/{{ user.username }}">@{{ user.username }}</a>. Would you like to <a href="{% url 'index' %}">view post feed</a> or <a href="{% url 'signout' %}">logout</a> instead?
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      </div>
+    </div>
+  </div>
+</section>
+{% endif %}
+
 <!-- Log in -->
 <section class="container-fluid">
   <div class="row align-items-center">
