--- a/templates/post-template.html
+++ b/templates/post-template.html
@@ -27,7 +27,7 @@
             <div class="row justify-content-between align-items-center">
                 <!-- "Applause" aka Likes -->
                 <div class="col-9 col-md-8">
-                    <p class="lead"><a href="/post-applause?post_id={{ post.id }}"><i class="fas fa-sign-language"></i></a> {{ post.no_of_applause }} applause</p>
+                    <p class="lead"><a href="/post-applause?post_id={{ post.id }}"><i class="fas fa-sign-language accent"></i></a> {{ post.no_of_applause }} applause</p>
                 </div>
                 <!-- Dropdown chevron for user options -->
                 {% if post.user == request.user %}
