--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,16 +4,27 @@ body {
     font-family: "Nunito", sans-serif;
 }
 
-/* Site Custom Properties */
+/* Site Custom Properties & Branding */
 a {
-    color: rgb(164, 129, 197);
+    color: var(--accent2);
 }
 :root {
     --accent1: #651049;
+    --accent2: rgb(164, 129, 197);
 }
 
-.accent {
+.accent1 {
     color: var(--accent1)
+}
+
+.btn-primary {
+    border-color: var(--accent1);
+    color: var(--accent1);
+    background-color: #fafafa;
+}
+
+.btn-light {
+    border-color: --accent2;
 }
 
 /* SIGN-IN PAGE */
