--- a/templates/base.html
+++ b/templates/base.html
@@ -109,7 +109,7 @@ aria-hidden="true">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save changes</button>
+                    <button type="submit" class="btn btn-primary">Post</button>
                 </div>
             </div>
         </form>
