Style settings page forms

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -146,6 +146,10 @@ label {
     letter-spacing: .1rem;
 }
 
+.no-bullet {
+    list-style: none;
+}
+
 /* MESSAGES */
 #message-div {
     position: fixed;
