Update 'add new history item' form styling

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -147,28 +147,27 @@
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
-                    <div class="modal-body row justify-content-center">
+                    <div class="modal-body row justify-content-center form-group">
                         <div class="col-12 mb-2">
                             <label for="history-heading">Heading <i class="fas fa-info-circle" data-toggle="tooltip"
                                     data-placement="right" title="e.g. school name or theatre company"></i></label>
                             <input type="text" maxlength="150" placeholder="" name="history_heading"
-                                id="history-heading" required>
+                                id="history-heading" class="form-control" required>
                         </div>
                         <div class="col-12 mb-2">
                             <label for="history-details">Details <i class="fas fa-info-circle" data-toggle="tooltip"
                                     data-placement="right" title="e.g. production title"></i></label>
                             <input type="text" maxlength="150" placeholder="" name="history_details"
-                                id="history-details">
+                                id="history-details" class="form-control">
                         </div>
                         <div class="col-12 mb-2">
                             <label for="history-role">Role <i class="fas fa-info-circle" data-toggle="tooltip"
                                     data-placement="right" title="Role or occupation"></i></label>
-                            <input type="text" maxlength="150" placeholder="" name="history_role" id="history-role"
-                                required>
+                            <input type="text" maxlength="150" placeholder="" name="history_role" id="history-role" class="form-control" required>
                         </div>
                         <div class="col-12 mb-2">
                             <label for="year">Year:</label>
-                            <select name="year" id="year" required>
+                            <select name="year" id="year" class="form-control" required>
                                 {% for id, year in YEAR_CHOICES %}
                                 <option value="{{ id }}">{{ year }}</option>
                                 {% endfor %}
