--- a/templates/signup.html
+++ b/templates/signup.html
@@ -22,6 +22,7 @@
               <div class="form-group col-12 col-md-10 justify-content-center align-items-center">
                 <label for="username">Username: </label>
                 <input type="text" class="form-control" id="username" name="username" required>
+                <small class="pb-2">This will be part of your unique profile url. Choose something memorable and appropriate.</small>
               </div>
               <div class="form-group col-12 col-md-10 justify-content-center align-items-center">
                 <label for="password">Password: </label>
