--- a/static/css/style.css
+++ b/static/css/style.css
@@ -129,6 +129,12 @@ h4 {
     font-weight: 700;
 }
 
+#post-text {
+    font-weight: 600;
+    font-size: 1.1rem;
+    text-align: justify;
+}
+
 /* SETTINGS STYLES */
 
 #avatar-upload {
