--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="https://res.cloudinary.com/cloud9wastaken/raw/upload/v1661286536/static/css/style-minified_ytehjo.css">
     <script src="https://kit.fontawesome.com/5d01ef762e.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" type="image/x-icon"
         href="https://res.cloudinary.com/cloud9wastaken/image/upload/v1661089294/media/favicon_aiafts.ico">
