--- a/templates/profile.html
+++ b/templates/profile.html
@@ -105,8 +105,8 @@
 
                 </div>
             </div>
-            <div class="col-12 col-md-7 order-1 order-md-2">
-                <div class="container-fluid">
+            <div class="col-12 col-md-8 order-1 order-md-2">
+                <div class="container-fluid px-1">
                     <!-- BIO -->
                     <div class="row">
                         <h3 class="mb-3 text-uppercase">Bio</h3>
@@ -124,13 +124,13 @@
                             {% endif %}
                         </h3>
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 px-1 px-md-2">
                         {% if num_user_posts > 0 %}
                             {% paginate 5 posts %}
                             {% for post in posts %}
                                 {% include 'post-template.html' %}
                             {% endfor %}
-                            <div class="col-12 d-flex justify-content-between">
+                            <div class="col-12 my-2 d-flex justify-content-between">
                             {% show_pageitems %}<span id="pagination-nav">{% show_pages %}</span>
                             </div>
                         {% endif %}
