--- a/templates/profile.html
+++ b/templates/profile.html
@@ -13,7 +13,7 @@
             <img src="{{ user_profile.avatar.url }}" class="profile-avatar avatar mx-2"
                 aria-labelledby="user-full-name">
         </div>
-        <div class="col-xs-10 offset-xs-1 col-md-9">
+        <div class="col-xs-10 offset-xs-1 col-md-9 mt-3">
             <div class="row">
                 <div class="col-12 px-2 px-md-0">
                     <a href="{{user_profile.user.username}}">
