--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,7 +36,7 @@ a {
 /* NAVBAR & FOOTER */
 .main-navbar {
     font-size: 1.2rem;
-    font-weight: 100;
+    font-weight: 200;
     text-transform: uppercase;
 }
 
@@ -44,9 +44,10 @@ a {
     color: var(--accent1);
 }
 
-.navbar-brand {
-    text-decoration: underline;
-    text-decoration-color: var(--accent1);
+#mainNav.navbar.scrolled {
+    background: rgb(236, 234, 238) !important;
+    transition: background-color 500ms !important;
+    border-bottom: 1px solid rgb(213, 213, 214);
 }
 
 footer {
@@ -133,6 +134,10 @@ h4 {
     font-weight: 600;
     font-size: 1.1rem;
     text-align: justify;
+}
+
+#applause-icon {
+    font-size: 1.75rem;
 }
 
 /* SETTINGS STYLES */
