--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://res.cloudinary.com/cloud9wastaken/raw/upload/v1661286536/static/css/style-minified_ytehjo.css">
     <script src="https://kit.fontawesome.com/5d01ef762e.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://res.cloudinary.com/cloud9wastaken/raw/upload/v1661301096/static/css/style_tnzch9.css">
     <link rel="shortcut icon" type="image/x-icon"
         href="https://res.cloudinary.com/cloud9wastaken/image/upload/v1661089294/media/favicon_aiafts.ico">
     <title>Opera Ireland</title>
@@ -21,17 +21,17 @@
     <!-- Navigation -->
     <div class="container-fluid">
         <nav class="navbar navbar-light navbar-expand-md py-0 bg-light fixed-top main-navbar" id="mainNav">
-            <a href="{% url 'index' %}" class="navbar-brand"><i class="fas fa-record-vinyl accent1" id="brand-icon"></i>pera Ireland</a>
+            <a href="{% url 'index' %}" class="navbar-brand"><i class="fas fa-record-vinyl accent1" id="brand-icon" aria-hidden="true"></i>pera Ireland</a>
             <!-- Nav Toggler -->
-            <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-links"
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks"
                 aria-label="Toggle Navigation Menu">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <!-- Nav Items -->
-            <div class="collapse navbar-collapse" id="nav-links">
+            <div class="collapse navbar-collapse" id="navLinks">
                 <ul class="navbar-nav ml-auto">
                     {% if user.is_authenticated %}
-                    <li class="nav-item"><a href="#" class="nav-link" data-toggle="modal" data-target="#newPostModal"><i class="fas fa-plus-square d-inline"></i> New Post</a></li>
+                    <li class="navItem"><a href="#" class="nav-link" data-toggle="modal" data-target="#newPostModal"><i class="fas fa-plus-square d-inline"></i> New Post</a></li>
                     <li class="nav-item"><a href="{% url 'settings' %}" class="nav-link"><i
                                 class="fas fa-cog d-inline"></i> Settings</a></li>
                     <li class="nav-item"><a href="/profile/{{user.username}}" class="nav-link"><i
@@ -136,6 +136,15 @@ aria-hidden="true">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+    </script>
+
+    <script>
+        $(function () {
+        $(document).scroll(function(){
+            let $nav = $("#mainNav");
+            $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+        });
+        });
     </script>
 </body>
 
